'忽略部分图片及配置文件'

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 *.png
 *.jpg
 *.css
-*/.vscode/launch.json
-*/img/
+*launch.json
+
 workspace.code-workspace
 !no-ff-merge-hist.jpg
 !branch-strategy.jpg
